# manimx

./: .buildinfo  LICENSE  MANIFEST.in  README.md  example_scenes.py  genindex.html  index.html  search.html  searchindex.js  setup.cfg
.github/workflows/: docs.yml  publish.yml
_sources/documentation/: constants.rst.txt
_sources/getting_started/: configuration.rst.txt  quickstart.rst.txt  structure.rst.txt
development/: about.html  changelog.html  contributing.html
docs/: example.py
documentation/: constants.html  custom_config.html
documentation/animation/: index.html
documentation/camera/: index.html
documentation/mobject/: index.html
documentation/scene/: index.html
documentation/shaders/: index.html
documentation/utils/: index.html
getting_started/: configuration.html  example_scenes.html  installation.html  quickstart.html  structure.html  whatsnew.html
logo/: logo.py
manimlib/mobject/: boolean_ops.py
manimx/: __init__.py  __main__.py  config.py  constants.py  default_config.yml  extract_scene.py  logger.py  shader_wrapper.py  window.py
manimx/animation/: animation.py  composition.py  creation.py  fading.py  growing.py  indication.py  movement.py  numbers.py  rotation.py  specialized.py  transform.py  transform_matching_parts.py  update.py
manimx/camera/: camera.py  camera_frame.py
manimx/event_handler/: __init__.py  event_dispatcher.py  event_listner.py
manimx/mobject/: boolean_ops.py  changing.py  coordinate_systems.py  frame.py  functions.py  geometry.py  interactive.py  matrix.py  mobject.py  mobject_update_utils.py  number_line.py  numbers.py  probability.py  shape_matchers.py  three_dimensions.py  value_tracker.py  vector_field.py
manimx/scene/: interactive_scene.py  scene.py  scene_file_writer.py
(+34 files in other folders)
