[metadata]
name = manimx
version = 2024.6.22
author = Mark Hoo
author_email= markhoo@foxmail.com
description = Animation engine for explanatory math videos
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/Manim-X/manimx
project_urls =
    Bug Tracker = https://github.com/Manim-X/manimx/issues
    Documentation = https://manim-x.github.io/manimx/
    Source Code = https://github.com/Manim-X/manimx
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Graphics
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Natural Language :: English

[options]
packages = find:
include_package_data = True
install_requires =
    colour<=0.1.5
    ipython<=8.24.0
    isosurfaces<=0.1.2
    manimpango>=0.4.0.post0,<0.5.0
    mapbox-earcut<=1.0.1
    matplotlib<=3.9.0
    moderngl<=5.10.0
    moderngl_window<=2.4.6
    numpy<=1.26.4
    Pillow<=10.3.0
    pydub<=0.25.1
    pygments<=2.18.0
    PyOpenGL<=3.1.7
    pyperclip<=1.8.2
    pyyaml<=6.0.1
    rich<=13.7.1
    scipy<=1.13.1
    screeninfo<=0.8.1
    skia-pathops<=0.8.0.post1
    svgelements>=1.8.1
    sympy<=1.12
    tqdm<=4.66.4
    validators<=0.28.3

[options.entry_points]
console_scripts =
    manimx = manimx.__main__:main
    manim-render = manimx.__main__:main
